[tool.poetry]
name = "multistate"
version = "0.1.1"
description = "A Python library for managing multiple simultaneous active states with intelligent pathfinding and coordinated transitions"
authors = ["Joshua Spinak <jspinak@alum.mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/multistate"
repository = "https://github.com/qontinui/multistate"
documentation = "https://qontinui.github.io/multistate/"
keywords = [
    "state-machine",
    "fsm",
    "multi-state",
    "pathfinding",
    "gui-automation",
    "state-management",
    "transitions"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "multistate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = ">=4.0.0"
dataclasses-json = ">=0.6.0"

# Optional dependencies for testing module
opencv-python = {version = ">=4.0.0", optional = true}
numpy = {version = ">=1.20.0", optional = true}
pyyaml = {version = ">=6.0.0", optional = true}

[tool.poetry.extras]
testing = ["opencv-python", "numpy"]
yaml = ["pyyaml"]
all = ["opencv-python", "numpy", "pyyaml"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
hypothesis = ">=6.0.0"
black = ">=24.0.0"
mypy = ">=1.14.0"
ruff = "^0.14"
isort = "^7.0.0"
types-PyYAML = ">=6.0.0"
types-networkx = ">=3.0.0"

[tool.poetry.group.examples.dependencies]
jupyter = ">=1.0.0"
matplotlib = ">=3.0.0"
networkx = ">=3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.0.0"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "multistate.testing.screenshot_manager"
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
